# plover_regenpfeifer

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  tox.ini
plover_german_regenpfeifer/dictionaries/: main.json
plover_regenpfeifer/: system.py
