[metadata]
name = plover_regenpfeifer
version = 1.1.2
description = German realtime system for Plover
long_description = file: README.rst
author = Martin Koerner
author_email = info@mkoerner.de
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/mkrnr/plover_regenpfeifer
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev1
include_package_data = True
packages =
	plover_regenpfeifer

[options.entry_points]
plover.system =
	Regenpfeifer = plover_regenpfeifer.system
